# VoiceKek

./: .gitignore  Cargo.toml  README.md
migrations/2019-06-03-174432_create_voices/: down.sql  up.sql
migrations/2019-06-03-193659_create_tasks/: up.sql
migrations/2019-06-06-155046_create_voice_permissions/: down.sql  up.sql
src/: download_file.rs  lib.rs  main.rs  models.rs  schema.rs
utilities/: hash.sh
voice_server/: index.js  package.json
