[package]
name = "VoiceKek"
version = "0.1.0"
authors = ["kekonen <daniil.naumetc@gmail.com>"]
edition = "2018"

[dependencies]
diesel = { version = "1.4.2", features = ["postgres", "chrono"] }
dotenv = "0.9.0"
telegram-bot = { path = "deps/telegram-bot/lib"}
futures = "0.1.27"
tokio-core = "0.1.17"
chrono = "0.4.6"
reqwest = "0.9.18"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.39"
serde_derive = "1.0.92"
bytes = "0.4.12"
blake2 = "0.8.0"
data-encoding = "2.1.2"